@startuml
'https://plantuml.com/class-diagram

abstract class AbstractSupply
class HpSupply
class FireSupply
class BombSupply

interface SupplyFactory
{
    + createSupply(...):AbstractSupply
}

class HpSupplyFactory{
    + createSupply(...):AbstractSupply
}

class FireSupplyFactory{
    + createSupply(...):AbstractSupply
}

class BombSupplyFactory{
    + createSupply(...):AbstractSupply
}

AbstractSupply <|-up- HpSupply
AbstractSupply <|-up- FireSupply
AbstractSupply <|-up- BombSupply

SupplyFactory <|.. HpSupplyFactory
SupplyFactory <|.. FireSupplyFactory
SupplyFactory <|.. BombSupplyFactory

HpSupplyFactory ..> HpSupply
FireSupplyFactory ..> FireSupply
BombSupplyFactory ..> BombSupply
@enduml